--- a/public/css/main.css
+++ b/public/css/main.css
@@ -99,9 +99,11 @@ span {
 }
 
 #notes-toolbar {
-  padding: 2px 10px;
+  padding: 10px 10px;
   border: 1px solid #666;
   border-bottom: none;
+  display: flex;
+  justify-content: flex-start;
 }
 
 #delete-note,
@@ -109,6 +111,9 @@ span {
 #auto-save {
   padding: 2px 8px;
   cursor: crosshair;
+  display: inline-flex;
+  justify-content: center;
+  flex-direction: column;
 }
 
 #delete-note svg,
