--- a/public/css/main.css
+++ b/public/css/main.css
@@ -80,6 +80,7 @@ span {
   border-bottom: 1px solid #666;
   padding: 2px 10px;
   cursor: pointer;
+  min-height: 70px;
 }
 
 .active {
@@ -109,15 +110,23 @@ span {
 #delete-note,
 #add-note,
 #auto-save {
-  padding: 2px 8px;
-  cursor: crosshair;
+  padding: 8px;
+  cursor: pointer;
   display: inline-flex;
   justify-content: center;
   flex-direction: column;
+  border-radius: 50%;
 }
 
 #delete-note svg,
 #add-note svg,
 #auto-save svg {
   fill: #ffeb3b;
+}
+
+
+#delete-note:hover,
+#add-note:hover,
+#auto-save:hover{
+  background-color: #666;
 }
